Radio page background scrolling issue on small screens

--- a/airtime_mvc/public/css/radio-page/radio-page.css
+++ b/airtime_mvc/public/css/radio-page/radio-page.css
@@ -15,7 +15,7 @@ body {
 
 
 .bck_cover {
-    position: absolute;
+    position: fixed;
     top: 0px;
     right: 0px;
     bottom: 0px;
